Cleaner exception handling for Sandbox and CustomCxtClassLoaderRunner